syntax = "proto3";
package shinfo.room;

import "internal/pb/common.proto";

option go_package = "github.com/jklaw90/shinfo/internal/pb/room;room";


message RoomGetRequest {
    string roomID = 1; // required
}
message RoomGetResponse {
    shinfo.common.Room room = 1;
}

message RoomGetByUserIDRequest {
    string userID = 1; // required
    int64 limit = 2; // required
    string nextID = 3;
}
message RoomGetByUserIDResponse {
    repeated shinfo.common.UserRoom rooms = 1;
    string nextID = 2;
}

message RoomGetUsersRequest {
    string roomID = 1; // required
    int64 limit = 2; // required
    string nextID = 3;
}
message RoomGetUsersResponse {
    repeated shinfo.common.RoomUser users = 1;
    string nextID = 2;
}

message RoomCreateRequest {
    string name = 1;
    int64 type = 2;
    bool public = 3;
    bool archived = 4;
}
message RoomCreateResponse {
    shinfo.common.Room room = 1;
}

message RoomAddUserRequest {
    string roomID = 1; // required
    shinfo.common.User user = 2; // required
}
message RoomAddUserResponse {}

service Room {
    rpc Get(RoomGetRequest) returns (RoomGetResponse) {}
	rpc GetByUserID(RoomGetByUserIDRequest) returns (RoomGetByUserIDResponse) {}
	rpc GetUsers(RoomGetUsersRequest) returns (RoomGetUsersResponse) {}
    rpc Create(RoomCreateRequest) returns (RoomCreateResponse) {}
	rpc AddUser(RoomAddUserRequest) returns (RoomAddUserResponse) {}
}
